stop using letter spacing property
It adds spacing after letters making text not centered.

--- a/src/res/css/game.css
+++ b/src/res/css/game.css
@@ -40,7 +40,6 @@ body {
 }
 
 .menu h1 {
-	letter-spacing: 0.75em;
 	white-space: nowrap;
 }
 
